Added some unit tests and test applications. Renamed the directory appl_json -> graphs.

--- a/test/posix_test/meson.build
+++ b/test/posix_test/meson.build
@@ -23,21 +23,21 @@ test('remove_sysfunc_body_posix_os',
 
 # Instance-Graph Test cases
 
-appl_json = meson.current_source_dir() / 'appl_json'
+graphs = meson.current_source_dir() / 'graphs'
 posix_test_settings = meson.current_source_dir() / 'settings'
 
 test('pthread_create',
         py3_inst,
         # The json object is not a files() object to allow paths to non existing json files.
         # See test/posix_test/posix_instance_graph.py for more information.
-        args: [files('posix_instance_graph.py'), appl_json / 'pthread_create.json', posix_pthread_create],
+        args: [files('posix_instance_graph.py'), graphs / 'pthread_create.json', posix_pthread_create],
         env: [python_path],
         suite: 'posix'
 )
 
 test('pthread_create_musl',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'pthread_create.json', posix_pthread_create_musl, posix_test_settings / 'no_recursive_func.json'],
+        args: [files('posix_instance_graph.py'), graphs / 'pthread_create.json', posix_pthread_create_musl],
         env: [python_path],
         suite: 'posix',
         timeout: 300
@@ -45,42 +45,42 @@ test('pthread_create_musl',
 
 test('mutex_counter',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'mutex_counter.json', posix_mutex_counter],
+        args: [files('posix_instance_graph.py'), graphs / 'mutex_counter.json', posix_mutex_counter],
         env: [python_path],
         suite: 'posix'
 )
 
 test('pipe',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'pipe.json', posix_pipe],
+        args: [files('posix_instance_graph.py'), graphs / 'pipe.json', posix_pipe],
         env: [python_path],
         suite: 'posix'
 )
 
 test('file_read',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'file_read.json', posix_file_read],
+        args: [files('posix_instance_graph.py'), graphs / 'file_read.json', posix_file_read],
         env: [python_path],
         suite: 'posix'
 )
 
 test('file_write',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'file_write.json', posix_file_write],
+        args: [files('posix_instance_graph.py'), graphs / 'file_write.json', posix_file_write],
         env: [python_path],
         suite: 'posix'
 )
 
 test('open_twice',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'open_twice.json', posix_open_twice],
+        args: [files('posix_instance_graph.py'), graphs / 'open_twice.json', posix_open_twice],
         env: [python_path],
         suite: 'posix'
 )
 
 test('file_read_musl',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'file_read.json', posix_file_read_musl],
+        args: [files('posix_instance_graph.py'), graphs / 'file_read.json', posix_file_read_musl],
         env: [python_path],
         suite: 'posix',
         timeout: 300
@@ -88,7 +88,7 @@ test('file_read_musl',
 
 test('file_write_musl',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'file_write.json', posix_file_write_musl],
+        args: [files('posix_instance_graph.py'), graphs / 'file_write.json', posix_file_write_musl],
         env: [python_path],
         suite: 'posix',
         timeout: 300
@@ -96,7 +96,7 @@ test('file_write_musl',
 
 test('open_twice_musl',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'open_twice.json', posix_open_twice_musl],
+        args: [files('posix_instance_graph.py'), graphs / 'open_twice.json', posix_open_twice_musl],
         env: [python_path],
         suite: 'posix',
         timeout: 300
@@ -104,28 +104,28 @@ test('open_twice_musl',
 
 test('semaphore',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'semaphore.json', posix_semaphore],
+        args: [files('posix_instance_graph.py'), graphs / 'semaphore.json', posix_semaphore],
         env: [python_path],
         suite: 'posix'
 )
 
 test('mutex_initializer',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'mutex_initializer.json', posix_mutex_initializer],
+        args: [files('posix_instance_graph.py'), graphs / 'mutex_initializer.json', posix_mutex_initializer],
         env: [python_path],
         suite: 'posix'
 )
 
 test('signal_handler',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'signal_handler.json', posix_signal_handler],
+        args: [files('posix_instance_graph.py'), graphs / 'signal_handler.json', posix_signal_handler],
         env: [python_path],
         suite: 'posix'
 )
 
 test('signal_handler_musl',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'signal_handler.json', posix_signal_handler_musl],
+        args: [files('posix_instance_graph.py'), graphs / 'signal_handler.json', posix_signal_handler_musl],
         env: [python_path],
         suite: 'posix',
         timeout: 300
@@ -133,14 +133,14 @@ test('signal_handler_musl',
 
 test('signal_handler_siginfo',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'signal_handler_siginfo.json', posix_signal_handler_siginfo],
+        args: [files('posix_instance_graph.py'), graphs / 'signal_handler_siginfo.json', posix_signal_handler_siginfo],
         env: [python_path],
         suite: 'posix'
 )
 
 test('signal_handler_siginfo_musl',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'signal_handler_siginfo.json', posix_signal_handler_siginfo_musl],
+        args: [files('posix_instance_graph.py'), graphs / 'signal_handler_siginfo.json', posix_signal_handler_siginfo_musl],
         env: [python_path],
         suite: 'posix',
         timeout: 300
@@ -148,14 +148,14 @@ test('signal_handler_siginfo_musl',
 
 test('ignore_signal',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'ignore_signal.json', posix_ignore_signal],
+        args: [files('posix_instance_graph.py'), graphs / 'ignore_signal.json', posix_ignore_signal],
         env: [python_path],
         suite: 'posix'
 )
 
 test('ignore_signal_musl',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'ignore_signal.json', posix_ignore_signal_musl],
+        args: [files('posix_instance_graph.py'), graphs / 'ignore_signal.json', posix_ignore_signal_musl],
         env: [python_path],
         suite: 'posix',
         timeout: 300
@@ -163,15 +163,38 @@ test('ignore_signal_musl',
 
 test('multiple_sigactions',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'multiple_sigactions.json', posix_multiple_sigactions],
+        args: [files('posix_instance_graph.py'), graphs / 'multiple_sigactions.json', posix_multiple_sigactions],
         env: [python_path],
         suite: 'posix'
 )
 
 test('multiple_sigactions_musl',
         py3_inst,
-        args: [files('posix_instance_graph.py'), appl_json / 'multiple_sigactions.json', posix_multiple_sigactions_musl],
+        args: [files('posix_instance_graph.py'), graphs / 'multiple_sigactions.json', posix_multiple_sigactions_musl],
         env: [python_path],
         suite: 'posix',
         timeout: 300
+)
+
+test('file_readv',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'file_readv.json', posix_file_readv],
+        env: [python_path],
+        suite: 'posix'
+)
+
+test('file_writev',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'file_writev.json', posix_file_writev],
+        env: [python_path],
+        suite: 'posix'
+)
+
+test('filestream_open_musl_syscall',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'filestream_open_musl_syscall.json', 
+               posix_filestream_open_musl, posix_test_settings / 'musl_syscall_detection.json'],
+        env: [python_path],
+        suite: 'posix',
+        timeout: 400
 )
