Improved test cases. Make some tests more consistent.

--- a/test/posix_test/meson.build
+++ b/test/posix_test/meson.build
@@ -22,6 +22,7 @@ test('remove_sysfunc_body_posix_os',
 )
 
 # Instance-Graph Test cases
+# Make sure to provide a test with musl and without musl when this is possible.
 
 graphs = meson.current_source_dir() / 'graphs'
 posix_test_settings = meson.current_source_dir() / 'settings'
@@ -34,7 +35,6 @@ test('pthread_create',
         env: [python_path],
         suite: 'posix'
 )
-
 test('pthread_create_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'pthread_create.json', posix_pthread_create_musl],
@@ -49,8 +49,21 @@ test('mutex_counter',
         env: [python_path],
         suite: 'posix'
 )
+test('mutex_counter_musl',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'mutex_counter.json', posix_mutex_counter_musl],
+        env: [python_path],
+        suite: 'posix',
+        timeout: 300
+)
 
 test('pipe',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'pipe.json', posix_pipe],
+        env: [python_path],
+        suite: 'posix'
+)
+test('pipe_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'pipe.json', posix_pipe_musl],
         env: [python_path],
@@ -64,21 +77,6 @@ test('file_read',
         env: [python_path],
         suite: 'posix'
 )
-
-test('file_write',
-        py3_inst,
-        args: [files('posix_instance_graph.py'), graphs / 'file_write.json', posix_file_write],
-        env: [python_path],
-        suite: 'posix'
-)
-
-test('open_twice',
-        py3_inst,
-        args: [files('posix_instance_graph.py'), graphs / 'open_twice.json', posix_open_twice],
-        env: [python_path],
-        suite: 'posix'
-)
-
 test('file_read_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'file_read.json', posix_file_read_musl],
@@ -87,6 +85,12 @@ test('file_read_musl',
         timeout: 300
 )
 
+test('file_write',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'file_write.json', posix_file_write],
+        env: [python_path],
+        suite: 'posix'
+)
 test('file_write_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'file_write.json', posix_file_write_musl],
@@ -95,6 +99,12 @@ test('file_write_musl',
         timeout: 300
 )
 
+test('open_twice',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'open_twice.json', posix_open_twice],
+        env: [python_path],
+        suite: 'posix'
+)
 test('open_twice_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'open_twice.json', posix_open_twice_musl],
@@ -109,6 +119,13 @@ test('semaphore',
         env: [python_path],
         suite: 'posix'
 )
+test('semaphore_musl',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'semaphore.json', posix_semaphore_musl],
+        env: [python_path],
+        suite: 'posix',
+        timeout: 300
+)
 
 test('mutex_initializer',
         py3_inst,
@@ -116,14 +133,20 @@ test('mutex_initializer',
         env: [python_path],
         suite: 'posix'
 )
+test('mutex_initializer_musl',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'mutex_initializer.json', posix_mutex_initializer_musl],
+        env: [python_path],
+        suite: 'posix',
+        timeout: 300
+)
 
 test('signal_handler',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'signal_handler.json', posix_signal_handler],
         env: [python_path],
-        suite: 'posix'
+        suite: 'posix',
 )
-
 test('signal_handler_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'signal_handler.json', posix_signal_handler_musl],
@@ -138,7 +161,6 @@ test('signal_handler_siginfo',
         env: [python_path],
         suite: 'posix'
 )
-
 test('signal_handler_siginfo_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'signal_handler_siginfo.json', posix_signal_handler_siginfo_musl],
@@ -153,7 +175,6 @@ test('ignore_signal',
         env: [python_path],
         suite: 'posix'
 )
-
 test('ignore_signal_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'ignore_signal.json', posix_ignore_signal_musl],
@@ -168,7 +189,6 @@ test('multiple_sigactions',
         env: [python_path],
         suite: 'posix'
 )
-
 test('multiple_sigactions_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'multiple_sigactions.json', posix_multiple_sigactions_musl],
@@ -183,6 +203,13 @@ test('file_readv',
         env: [python_path],
         suite: 'posix'
 )
+test('file_readv_musl',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'file_readv.json', posix_file_readv_musl],
+        env: [python_path],
+        suite: 'posix',
+        timeout: 300
+)
 
 test('file_writev',
         py3_inst,
@@ -190,7 +217,15 @@ test('file_writev',
         env: [python_path],
         suite: 'posix'
 )
+test('file_writev_musl',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'file_writev.json', posix_file_writev_musl],
+        env: [python_path],
+        suite: 'posix',
+        timeout: 300
+)
 
+# Linux syscall detection is only possible with musl libc.
 test('filestream_open_musl_syscall',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'filestream_open_musl_syscall.json', 
@@ -206,7 +241,6 @@ test('nanosleep',
         env: [python_path],
         suite: 'posix'
 )
-
 test('nanosleep_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'nanosleep.json', posix_nanosleep_musl],
@@ -215,6 +249,8 @@ test('nanosleep_musl',
         timeout: 300
 )
 
+# sleep detection is only possible with musl libc,
+# because we do sleep() -> nanosleep()
 test('sleep',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'sleep.json', posix_sleep_musl],
@@ -229,7 +265,6 @@ test('set_thread_attr',
         env: [python_path],
         suite: 'posix'
 )
-
 test('set_thread_attr_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'set_thread_attr.json', posix_set_thread_attr_musl],
@@ -244,7 +279,6 @@ test('set_thread_attr_inheritance',
         env: [python_path],
         suite: 'posix'
 )
-
 test('set_thread_attr_inherit_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'set_thread_attr_inheritance.json', posix_set_thread_attr_inheritance_musl],
@@ -259,8 +293,21 @@ test('pthread_detach',
         env: [python_path],
         suite: 'posix'
 )
+test('pthread_detach_musl',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'pthread_detach.json', posix_pthread_detach_musl],
+        env: [python_path],
+        suite: 'posix',
+        timeout: 300
+)
 
 test('pthread_cancel',
+        py3_inst,
+        args: [files('posix_instance_graph.py'), graphs / 'pthread_cancel.json', posix_pthread_cancel],
+        env: [python_path],
+        suite: 'posix'
+)
+test('pthread_cancel_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'pthread_cancel.json', posix_pthread_cancel_musl],
         env: [python_path],
@@ -274,7 +321,6 @@ test('condition_variable',
         env: [python_path],
         suite: 'posix'
 )
-
 test('condition_variable_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'condition_variable.json', posix_condition_variable_musl],
@@ -289,7 +335,6 @@ test('condition_var_initializer',
         env: [python_path],
         suite: 'posix'
 )
-
 test('condition_var_initializer_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'condition_var_initializer.json', posix_condition_var_initializer_musl],
@@ -304,7 +349,6 @@ test('condition_var_broadcast',
         env: [python_path],
         suite: 'posix'
 )
-
 test('condition_var_broadcast_musl',
         py3_inst,
         args: [files('posix_instance_graph.py'), graphs / 'condition_var_broadcast.json', posix_condition_var_broadcast_musl],
