ValueAnalyzer: more intelligent object assign
For assigning object, we have in principal two cases:

1. Multiple objects are assigned at the same place in the code (i.e.
   nested within a function call. In this case, the correct storage
   node can be retrieved by respecting the context aka call path.
2. Multiple objects are assigned to the same memory location (i.e. a
   struct), which is only addressed by an offset. In this case, only the
   storage node is unique (and the getelementpr before it). Assigning is
   more complicated here. Ideally, we would assign the object offset
   aware. However, this is more complicated so as a workaround we
   assign to the unique storage node (if the context is empty) and hope
   that this fulfils most use cases.

Fixes T211

--- a/test/meson.build
+++ b/test/meson.build
@@ -95,6 +95,7 @@ if get_option('enable_step_tests')
         py3_inst,
         args: [files('value_analysis.py'), files('value_analysis.json'), freertos_svf],
         env: [python_path],
+        dependencies: ara_py,
         suite: 'steps'
     )
 
