graph: refactor callpath into a seperate file

--- a/ara/graph/cgraph/meson.build
+++ b/ara/graph/cgraph/meson.build
@@ -16,8 +16,10 @@ graph_data_mod = py3_inst.extension_module('graph_data',
   graph_data_pyx_cpp,
   'graph.cpp',
   'arguments.cpp',
+  'callpath.cpp',
   'mix.cpp',
   'os.cpp',
+  depend_files: graph_data_pyx_header,
   dependencies: [py3_inst.dependency(), llvm_dep, boost_dep, graph_tool_dep, common_dep, pyllco_dep, svf_dep]
 )
 graph_data_dir = meson.current_build_dir()
